syntax = "proto3";

package chat_server_v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/waryataw/chat_server/pkg/chat_server_v1";

message CreateChatRequest {
  repeated string usernames = 1;
}

message CreateChatResponse {
  int64 id = 1;
}

message DeleteChatRequest {
  int64 id = 1;
}

message SendMessageRequest {
  string from = 1;
  string text = 2;
  google.protobuf.Timestamp timestamp = 3;
}
